[package]
name = "ai-connect"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tokio-macros = "2.4.0"
